06-services/ingress/kuard-dpl-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    internalVersion: 0.0.1
    run: kuard
  name: kuard
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    internalVersion: 0.0.1
    run: kuard
  type: NodePort
status:
  loadBalancer: {}
