06-services/ingress/kuard-ingress-static.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: kuardstatic-ip
spec:
  backend:
    serviceName: kuard
    servicePort: 8080
