06-services/ingress/kuard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kuard-ingress
spec:
  backend:
    serviceName: kuard
    servicePort: 8080
